# Skypro_kyrsovaya_5

./: .flake8  README.md  config.py  main.py  pyproject.toml
src/: db_manager.py  hh_api.py  utils.py
tests/: hh_api_test.py
